--- a/final/index.html
+++ b/final/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel ="stylesheet" href="style.css">
     <title>Coding Quiz</title>
 </head>
 <body>
@@ -27,15 +28,17 @@
 
             <div id="timer">
 
-                <div id="timer"></div>
-                <div id="btimegauge"></div>
-                <div id="timegauge"></div>
+                <div id="counter"></div>
+                <div id="bTimeGauge"></div>
+                <div id="timeGauge"></div>
 
             </div>
+
+            <div id= "progress"></div>
         
         </div>
             
-        <div id="score" style="display: none"></div>
+        <div id= "score" style="display: none"></div>
 
 
 
