--- a/final/index.html
+++ b/final/index.html
@@ -12,8 +12,11 @@
     <div id="container">
 
         <div id="start">Start Quiz!</div>
+        
+        <div id="quizDone" style="display: none">Quiz Over!</div>
 
         <div id="quiz" style="display: none">
+        
 
             <div id="question"> </div>
 
