local storage, captured count for score

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 
         <div id="quizDone" style="display: none">
             Quiz Over!
-            <div id= "scoreContainer" style="display: none"></div>
+            
+            <div id= "scoreContainer" style="display: none">
+                <p>User:<span id="user-name"></span></p> | 
+                <p>Score:<span id="user-score"></span></p>
+            </div>
         
         </div>
 
